# part-4

./: 01. Istruzioni Condizionali in Python.ipynb  02. Istruzioni di Iterazione in Python.ipynb  03. Generatori e Comprehension.ipynb  04. Esempio - Zeta di Riemann.ipynb  05. Esempio - Somma di Elementi.ipynb  06. Esercizio - Calcolo Ripetuto.ipynb  07. Esercizio - Prodotto di elementi in una lista.ipynb  08. Esercizio - Prodotto Scalare.ipynb  09. Esercizio - Serie Geometrica.ipynb  10. Esercizio - Fattoriale.ipynb  11. Esercizio - Logaritmo (1).ipynb  12. Esercizio - Logaritmo (2).ipynb  13. Esercizio - Operatore modulo.ipynb  14. Esercizio - Numeri primi.ipynb  pyproject.toml
