[tool.poetry]
name = "part-4"
version = "1.0"
description = "Part 4 of the Fondamenti di Informatica - T course"
authors = ["Michele Lombardi <michele.lombardi2@unibo.it>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
notebook = "^6"
numpy = "^2.2.3"
scipy = "^1.15.2"
matplotlib = "^3.10.1"
rise = "^5.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
